--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -57,3 +57,28 @@ jobs:
         DOCKER_REPOSITORY: ${{ env.DOCKER_REPOSITORY }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }} 
+           
+    # Set the target AKS cluster.
+    - uses: Azure/aks-set-context@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        cluster-name: ${{ env.CLUSTER_NAME }}
+        resource-group: ${{ env.RESOURSE_GROUP }}
+
+    - uses: Azure/k8s-deploy@v1
+      with:
+        manifests: |
+          kubernetes/mssql-pv.azure.yaml
+          kubernetes/mssql-configmap.yaml
+          kubernetes/mssql-secret.yaml
+          kubernetes/mssql-deployment.yaml
+          kubernetes/mvc-deployment.azure.yaml
+    
+    - name: Run Kube-Bench to check cluster config
+      continue-on-error: true
+      run: |
+        kubectl apply -f https://raw.githubusercontent.com/aquasecurity/kube-bench/main/job-aks.yaml
+        sleep 30s
+        kubectl logs job.batch/kube-bench
+        kubectl delete job.batch/kube-bench
+  
