--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -59,13 +59,13 @@ jobs:
         IMAGE_TAG: ${{ env.IMAGE_TAG }} 
            
     # Set the target AKS cluster.
-    - uses: Azure/rushi
+    - uses: Azure/aks-set-context@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         cluster-name: ${{ env.CLUSTER_NAME }}
         resource-group: ${{ env.RESOURSE_GROUP }}
 
-    - uses: Azure/demo
+    - uses: Azure/k8s-deploy@v1
       with:
         manifests: |
           kubernetes/mssql-pv.azure.yaml
